# xtal

./: .gitattributes  .gitignore  CMakeLists.txt  FIXME  FIXME.md  LICENSE  LICENSE.md  LICENSE.txt  README.md  conanfile.py
.conan2/: remotes.json
.conan2/profiles/: Ubuntu  default  macOS  macos  ubuntu  windows
.github/workflows/: conan-create.yml  conan.yml  pages.yml
doxygen/: Doxyfile  index-footer.html  index-header.html  index.css  index.sh
include/: module.modulemap  xtal.c++  xtal.cc  xtal.cxx  xtal.hpp  xtal.ii  xtal.ipp
include/xtal/: _.hpp  _.hxx  ___.hh  _detail.ii  _detail.ixx  _echo.hxx  _entail.ii  _etc.hxx  _kernel.ii  _kernel.ixx  _logger.ixx  _retail.ii  _sense.ixx  _xtd.ii  all.c++  all.cc  all.cxx  all.hh  all.hpp  all.ii  all.ipp  any.c  any.c++  any.cc  any.cxx  any.h  any.hh  any.hpp  any.hxx  any.ii  any.ipp  bond.hh  etc.cc  etc.hh  etc.hpp  module.modulemap
include/xtal/access/: _detail.ii  all.cc  any.cc  any.hh  block.cc  block.hh  spool.cc  spool.hh  store.cc  store.hh
include/xtal/algebra/: _detail.ii  all.cc  all.hh  any.cc  any.hh  bicycle.cc  bicycle.hh  lateral.cc  lateral.hh  lattice.cc  lattice.hh  phason.cc  phason.hh  quantity.cc  quantity.hh  scalar.cc  scalar.hh  sector.cc  sector.hh  serial.cc  serial.hh  series.cc  series.hh  symbol.cc  symbol.hh
include/xtal/any/: all.c++  all.cxx  all.hpp  any.c++  any.cxx  any.hpp  buffer.cxx  buffer.hpp  bundle.cxx  bundle.hpp  collate.cxx  collate.hpp  collect.cxx  collect.hpp  compose.cxx  compose.hpp  iterate.c++  (+11 more)
test_package/: .gitignore  CMakeLists.txt  conanfile.py
(+1397 files in other folders)
